# multi-agentic-customer-support-lyzr-qdrant

./: .gitignore  README.md  pyproject.toml  test.py
data/ecom/: crm_records.csv  helpdesk_logs.csv  orders.csv
data/ecom/images/qdrant_storage/: raft_state.json
data/ecom/images/qdrant_storage/collections/knowledge_base/0/: newest_clocks.json
data/ecom/images/qdrant_storage/collections/orders/: config.json  payload_index.json
data/ecom/images/qdrant_storage/collections/user_data/: payload_index.json
data/ecom/knowledge_base/: faqs.json  handbook.json  policy.json
data/fintech/: crm_records.csv  helpdesk_logs.csv
data/fintech/knowledge_base/: faqs.json  handbook.json  policy.json
notebooks/: fix_bugs.ipynb  imge_embedding.ipynb  qdrant_ingestion.ipynb  qdrant_retrieval.ipynb  scrape_amazon.ipynb
qdrant_storage/: raft_state.json
qdrant_storage/collections/knowledge_base/: config.json  payload_index.json
qdrant_storage/collections/knowledge_base/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/orders/: payload_index.json
qdrant_storage/collections/orders/0/: newest_clocks.json
qdrant_storage/collections/semantic_cache/: config.json  payload_index.json
qdrant_storage/collections/semantic_cache/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/user_data/0/: newest_clocks.json
src/: agents.py  caching.py  ingest_data.py  llm.py  qdrant_retriever.py  run_chat.py  setup_qdrant.py  tasks.py  utils.py
src/agents_util/: agents.py  tasks.py
src/qdrant_util/: caching.py  qdrant_retriever.py  setup_qdrant.py
(+455 files in other folders)
